cdbs (0.4.41) UNRELEASED; urgency=low

  * Removed _cdbs_bootstrap variable
  * Propagate LDFLAGS (autotools-vars.mk, makefile-vars.mk)

 -- Peter Eisentraut <petere@debian.org>  Sat,  3 Jun 2006 00:21:20 +0200

cdbs (0.4.40) unstable; urgency=low

  * Acknowledge NMU (closes: #365085)
  * Added DEB_PYTHON_PACKAGES_EXCLUDE (python-distutils.mk)
    (closes: #365257)
  * cdbs-edit-patch: Avoid error message when creating new patch
  * Try patches at level 1 first, to avoid problems with patches that only
    create new files (simple-patchsys.mk) (closes: #365524)
  * Unset DEB_DBG_PACKAGE_ALL if some DEB_DBG_PACKAGE_pkg is set by user
    (debhelper.mk); test case in debhelper-6.sh
  * Set DEB_DBG_PACKAGE_pkg automatically if corresponding pkg exists
    (debhelper.mk) (closes: #365122); test case in debhelper-7.sh
  * Resurrected old documentation changelog
  * Fixed doc-base entries
  * Documented that directories with special characters are not supported
    (closes: #306941)
  * Corrected some typos in documentation (closes: #365457)

 -- Peter Eisentraut <petere@debian.org>  Mon, 29 May 2006 00:24:11 +0200

cdbs (0.4.39-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add a sequencing point to ensure all dh_makeshlibs are run before any
    dh_shlibdeps is (closes: #365085).

 -- Pierre Habouzit <madcoder@debian.org>  Fri,  5 May 2006 21:16:19 +0200

cdbs (0.4.39) unstable; urgency=low

  * Added definitions of DEB_HOST_ARCH_CPU and DEB_HOST_ARCH_OS
    (buildvars.mk)
  * Added definition of DEB_UPSTREAM_VERSION (buildvars.mk)
  * Remove *.pyc on clean (python-distutils.mk) (closes: #252134)
  * Remove *.omf.out from help directory (gnome.mk) (closes: #292374)
  * Moved dh_shlibdeps call to binary-predeb (debhelper.mk)
    (closes: #326926)
  * Rewrote various shell conditionals as make conditionals
    (closes: #222376)
  * Added 2.5 as possible Python version
  * Remove Python build directories for every used Python version