@@ -2,8 +2,9 @@ cdbs (0.4.41) UNRELEASED; urgency=low
 
   * Removed _cdbs_bootstrap variable
   * Propagate LDFLAGS (autotools-vars.mk, makefile-vars.mk)
+  * Added qmake class (closes: #360589)
 
- -- Peter Eisentraut <petere@debian.org>  Sat,  3 Jun 2006 00:21:20 +0200
+ -- Peter Eisentraut <petere@debian.org>  Sat,  3 Jun 2006 00:59:45 +0200
 
 cdbs (0.4.40) unstable; urgency=low
 
